# voice_gate

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
docs/superpowers/plans/: 2026-03-22-audio-fix.md  2026-03-22-burn-to-tract-migration.md
docs/superpowers/specs/: 2026-03-22-audio-fix-design.md  2026-03-22-burn-to-tract-migration-design.md
src/: app.rs  backend.rs  config.rs  error.rs  inference.rs  main.rs  models.rs
src/audio/: capture.rs  mel.rs  mod.rs  output.rs  resampler.rs
src/model/: mod.rs
src/pipeline/: mod.rs  processor.rs  recorder.rs  state_machine.rs  verifier.rs
src/speaker/: embedding.rs  enrollment.rs  mod.rs  profile.rs
src/ui/: enrollment_view.rs  main_view.rs  mod.rs  model_setup_view.rs  settings_view.rs
src/vad/: mod.rs  silero.rs
