[package]
name = "voice_gate"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = """
Voice Gate — intelligent microphone gate that activates only for *your* voice.
Silero VAD for voice detection + ECAPA-TDNN for speaker verification.
"""
license = "MIT"
readme = "README.md"

[dependencies]
# ── ONNX Inference ────────────────────────────────────────────────────
# ort bundles ONNX Runtime as a static library — no separate install needed.
ort = "2.0.0-rc.12"
ndarray = "0.16"

# ── Audio I/O ──────────────────────────────────────────────────────────
cpal = "0.15"
hound = "3.5"

# ── GUI ──────────────────────────────────────────────────────────────
eframe = "0.31"
egui = "0.31"

# ── DSP (mel-spectrogram for speaker embedding) ───────────────────────
rustfft = "6"

# ── Utilities ──────────────────────────────────────────────────────────
dirs = "6"
rfd = "0.15"
ureq = "3"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
